--- a/themes/quit/layout/_partial/header.ejs
+++ b/themes/quit/layout/_partial/header.ejs
@@ -1,10 +1,15 @@
 <%- css('css/header.css') %>
 	<div class="header">
-		<div class="header-top">
+		<div class="header-top"> 
 			<div class="h-left">
 				<a href="<%= theme.menus.home %>">
 					<img src="<%- theme.logo %>" alt="Z">
 				</a>
+			</div>
+			<div style="width:100%;display:flex;justify-content: center;align-items:center;position:relative;" class="my-custom-title">
+				<div class="my-custom-img" style="position:absolute;right:10px;margin-top:3px;transition: all 1s;"><img src="/image/search.jpg" alt="" width="26" height="26"></div>
+				<input id="my-custom-inp" class="my-custom-inp" type="text" style="width: 80%;outline:none;height:35%;border:1px solid #eee;border-radius:30px;padding-left:15px;opacity:0;transition: all 1s;">
+				<div id="my-custom-content" style="position: absolute;top:100%;width:80%;background:white;opacity:0;transform: translateY(-100%);transition: all 1s;"></div>
 			</div>
 			<div class="h-right">
 				<ul>
@@ -39,3 +44,9 @@
 		<script>
 			$(function () { $(window).scroll(function () { if ($(document).scrollTop() > 100) { $(".header-top").removeClass("header-move2"); $('.header-top').addClass('header-move1') } else { $(".header-top").removeClass("header-move1"); $('.header-top').addClass('header-move2') } }) });
 		</script>
+
+
+
+
+
+	<%- js('js/search.js') %>
