--- a/themes/quit/layout/_partial/header.ejs
+++ b/themes/quit/layout/_partial/header.ejs
@@ -7,8 +7,8 @@
 				</a>
 			</div>
 			<div style="width:100%;display:flex;justify-content: center;align-items:center;position:relative;" class="my-custom-title">
-				<div class="my-custom-img" style="position:absolute;right:10px;margin-top:3px;transition: all 1s;"><img src="/image/search.jpg" alt="" width="26" height="26"></div>
 				<input id="my-custom-inp" class="my-custom-inp" type="text" style="width: 80%;outline:none;height:35%;border:1px solid #eee;border-radius:30px;padding-left:15px;opacity:0;transition: all 1s;">
+				<div class="my-custom-img" style="position:absolute;right:10px;margin-top:3px;transition: all 1s;"><img src="/image/search.png" alt="" width="26" height="26"></div>
 				<div id="my-custom-content" style="position: absolute;top:100%;width:80%;background:white;opacity:0;transform: translateY(-100%);transition: all 1s;"></div>
 			</div>
 			<div class="h-right">
