--- a/themes/quit/layout/_partial/header.ejs
+++ b/themes/quit/layout/_partial/header.ejs
@@ -1,52 +1,57 @@
 <%- css('css/header.css') %>
-	<div class="header">
-		<div class="header-top"> 
-			<div class="h-left">
-				<a href="<%= theme.menus.home %>">
-					<img src="<%- theme.logo %>" alt="Z">
-				</a>
-			</div>
-			<div style="width:100%;display:flex;justify-content: center;align-items:center;position:relative;" class="my-custom-title">
-				<input id="my-custom-inp" class="my-custom-inp" type="text" style="width: 80%;outline:none;height:35%;border:1px solid #eee;border-radius:30px;padding-left:15px;opacity:0;transition: all 1s;">
-				<div class="my-custom-img" style="position:absolute;right:10px;margin-top:3px;transition: all 1s;"><img src="/image/search.png" alt="" width="26" height="26"></div>
-				<div id="my-custom-content" style="position: absolute;top:100%;width:80%;background:white;opacity:0;transform: translateY(-100%);transition: all 1s;"></div>
-			</div>
-			<div class="h-right">
-				<ul>
-					<% for(const menu in theme.menus) { %>
-						<% if( name==menu ) {%>
-							<li class="select">
-								<a href="<%= theme.menus[menu] %>">
-									<%= theme.menus_title[menu] %>
-								</a>
-								<span class="dot"></span>
-							</li>
-							<% }else{ %>
-								<li>
+	<%- css('css/common.css') %>
+		<div class="header">
+			<div class="header-top">
+				<div class="h-left">
+					<a href="<%= theme.menus.home %>">
+						<img src="<%- theme.logo %>" alt="Z">
+					</a>
+				</div>
+				<div style="width:100%;display:flex;justify-content: center;align-items:center;position:relative;"
+					class="my-custom-title">
+					<input id="my-custom-inp" class="my-custom-inp" type="text" />
+					<div class="my-custom-img" style="position:absolute;right:10px;margin-top:3px;transition: all 1s;">
+						<img src="/image/search.png" alt="" width="26" height="26"></div>
+					<div class="scrollbar my-custom-wra" id="my-custom-wra" >
+						<div id="my-custom-content"></div>
+					</div>
+				</div>
+				<div class="h-right">
+					<ul>
+						<% for(const menu in theme.menus) { %>
+							<% if( name==menu ) {%>
+								<li class="select">
 									<a href="<%= theme.menus[menu] %>">
 										<%= theme.menus_title[menu] %>
 									</a>
 									<span class="dot"></span>
 								</li>
-								<% } %>
+								<% }else{ %>
+									<li>
+										<a href="<%= theme.menus[menu] %>">
+											<%= theme.menus_title[menu] %>
+										</a>
+										<span class="dot"></span>
+									</li>
 									<% } %>
-				</ul>
-			</div>
-			<div class="h-right-close">
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-					<path fill="none" d="M0 0h24v24H0z" />
-					<path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z" fill="rgba(68,68,68,1)" />
-				</svg>
+										<% } %>
+					</ul>
+				</div>
+				<div class="h-right-close">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+						<path fill="none" d="M0 0h24v24H0z" />
+						<path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z" fill="rgba(68,68,68,1)" />
+					</svg>
+				</div>
 			</div>
 		</div>
-	</div>
-	<%- partial('_widget/sidebar') %>
-		<script>
-			$(function () { $(window).scroll(function () { if ($(document).scrollTop() > 100) { $(".header-top").removeClass("header-move2"); $('.header-top').addClass('header-move1') } else { $(".header-top").removeClass("header-move1"); $('.header-top').addClass('header-move2') } }) });
-		</script>
+		<%- partial('_widget/sidebar') %>
+			<script>
+				$(function () { $(window).scroll(function () { if ($(document).scrollTop() > 100) { $(".header-top").removeClass("header-move2"); $('.header-top').addClass('header-move1') } else { $(".header-top").removeClass("header-move1"); $('.header-top').addClass('header-move2') } }) });
+			</script>
 
 
 
 
 
-	<%- js('js/search.js') %>
+			<%- js('js/search.js') %>
