--- a/themes/quit/layout/tags.ejs
+++ b/themes/quit/layout/tags.ejs
@@ -27,7 +27,7 @@
                 }
             %>
             <% if(i< theme.tagsNum ) {%>
-            <a href="<%= tag.name %>" class="<%= tag.name %>" value="<%= tag.name %>">
+            <a href="/tags/<%= tag.name %>" class="<%= tag.name %>" value="<%= tag.name %>">
                 <span style='color: <%= getRandomColor()  %>'><%= tag.name %> <i><%= tag.length %></i> </span>
             </a>
             <%}%>
